--- a/cart.html
+++ b/cart.html
@@ -8,7 +8,7 @@
 </head>
 <body onload = "display();">
 <ul>
-<li><a href="#">Home</a></li>
+<li><a href="index.html">Home</a></li>
 <li class = "dropdown">
 <a href="meals.html" class = "dropbtn">Meals</a>
 <div class = "content">
@@ -17,9 +17,14 @@
 <a href="dinner.html">Dinner</a>
 </div>
 </li>
-<li><a href="cart.html">Cart</a></li>
-<li><a href="#">Credits</a></li>
+<li><a href="#">Cart</a></li>
+<li><a href="credits.html">Credits</a></li>
 </ul> 
+<div class = "food-pic">
+<div class = "food-left" id = "pic">
+<!--Where I want the pictures to go-->
+</div>
+</div>
 <p id = "cart"></p>
 </body>
 </html>
