--- a/meals.html
+++ b/meals.html
@@ -17,7 +17,7 @@
 </div>
 </li>
 <li><a href="cart.html">Cart</a></li>
-<li><a href="#">Credits</a></li>
+<li><a href="credits.html">Credits</a></li>
 </ul> 
 <div class = "column">
 
