--- a/cart.html
+++ b/cart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id = "one">
+<html id = "two">
 <head>
 	<title>On the Go</title>
 	<meta charset="utf-8">
@@ -20,9 +20,9 @@
 <li><a href="#">Cart</a></li>
 <li><a href="credits.html">Credits</a></li>
 </ul> 
-<div class = "food-pic">
-<div class = "food-left" id = "pic">
-<!--Where I want the pictures to go-->
+<div>
+<div id = "pic">
+</div>
 </div>
 </div>
 <p id = "cart"></p>
