--- a/dinner.html
+++ b/dinner.html
@@ -4,7 +4,7 @@
 	<title>On the Go</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
-	
+	<script type="text/javascript" src="jscript.js"></script>
 </head>
 <body>
 <ul>
@@ -20,7 +20,6 @@
 <li><a href="cart.html">Cart</a></li>
 <li><a href="credits.html">Credits</a></li>
 </ul> 
-<p></p>
 <div class = "food-pic">
 <div class = "food-left">
 <img id = "Meatloaf" src="http://img1.southernliving.timeinc.net/sites/default/files/image/2005/04/top-recipes-april-2005/favorite-meatloaf-l.jpg" alt="meatloaf">
