--- a/lunch.html
+++ b/lunch.html
@@ -4,6 +4,7 @@
 	<title>On the Go</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<script type="text/javascript" src="jscript.js"></script>
 	
 </head>
 <body>
