--- a/checkout.html
+++ b/checkout.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<script type="text/javascript" src="jscript.js"></script>
 </head>
-<body onload = "display();">
+<body onload= "checkoutDisplay();">
 <ul>
 <li><a href="index.html">Home</a></li>
 <li class = "dropdown">
@@ -17,13 +17,10 @@
 <a href="dinner.html">Dinner</a>
 </div>
 </li>
-<li><a href="#">Cart</a></li>
+<li><a href="cart.html">Cart</a></li>
 <li><a href="credits.html">Credits</a></li>
 </ul> 
-<div>
-<div id = "pic">
-</div>
-</div>
-<p id="cart">Total:</p>
+<p id = "check">
+</p>
 </body>
 </html>
