--- a/dinner.html
+++ b/dinner.html
@@ -35,7 +35,7 @@
 </div>
 <div class = "food-left">
 <img id = "Filet Mignon" src="http://img1.cookinglight.timeinc.net/sites/default/files/styles/400xvariable/public/image/2004/11/0411p242-filet-mignon-m.jpg?itok=N4NDSR9t" alt="Filet mignon with bearnaise sauce">
-<button type="button" class="btn" onclick="add(23.99,'Fliet Mignon');">Add $23.99</button>
+<button type="button" class="btn" onclick="add(23.99,'Filet Mignon');">Add $23.99</button>
 </div>
 <div class = "food-left">
 <img id="Jambalaya" src="http://wdy.h-cdn.co/assets/cm/15/09/54ef93535668c_-_jambalaya-recipe-wdy0314-de.jpg" alt="Jambalaya">
