--- a/breakfast.html
+++ b/breakfast.html
@@ -10,7 +10,7 @@
 <ul>
 <li><a href="index.html">Home</a></li>
 <li class = "dropdown">
-<a href="meals.html" class = "dropbtn">Meals</a>
+<a href="meals.html" class = "dropbtn">Menu</a>
 <div class = "content">
 <a href="#">Breakfast</a>
 <a href="lunch.html">Lunch</a>
