--- a/cart.html
+++ b/cart.html
@@ -10,14 +10,14 @@
 <ul>
 <li><a href="index.html">Home</a></li>
 <li class = "dropdown">
-<a href="meals.html" class = "dropbtn">Meals</a>
+<a href="meals.html" class = "dropbtn">Menu</a>
 <div class = "content">
 <a href="breakfast.html">Breakfast</a>
 <a href="lunch.html">Lunch</a>
 <a href="dinner.html">Dinner</a>
 </div>
 </li>
-<li><a href="#">Cart</a></li>
+<li><a href="cart.html">Cart</a></li>
 <li><a href="credits.html">Credits</a></li>
 </ul> 
 <div>
