--- a/credits.html
+++ b/credits.html
@@ -6,11 +6,11 @@
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<script type="text/javascript" src="jscript.js"></script>
 </head>
-<body onload= "checkoutDisplay();">
+<body>
 <ul>
 <li><a href="index.html">Home</a></li>
 <li class = "dropdown">
-<a href="meals.html" class = "dropbtn">Meals</a>
+<a href="meals.html" class = "dropbtn">Menu</a>
 <div class = "content">
 <a href="breakfast.html">Breakfast</a>
 <a href="lunch.html">Lunch</a>
