--- a/finish.html
+++ b/finish.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<script type="text/javascript" src="jscript.js"></script>
 </head>
-<body onload= "checkoutDisplay();">
+<body onload= "finishDisplay();">
 <ul>
 <li><a href="index.html">Home</a></li>
 <li class = "dropdown">
@@ -20,9 +20,8 @@
 <li><a href="cart.html">Cart</a></li>
 <li><a href="credits.html">Credits</a></li>
 </ul> 
-<p id = "checks">
-</p>
 <p id = "deliv">
 </p>
+
 </body>
 </html>
