--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <ul>
 <li><a href="#">Home</a></li>
 <li class = "dropdown">
-<a href="meals.html" class = "dropbtn">Meals</a>
+<a href="meals.html" class = "dropbtn">Menu</a>
 <div class = "content">
 <a href="breakfast.html">Breakfast</a>
 <a href="lunch.html">Lunch</a>
@@ -18,7 +18,7 @@
 </div>
 </li>
 <li><a href="cart.html">Cart</a></li>
-<li><a href="#">Credits</a></li>
+<li><a href="credits.html">Credits</a></li>
 </ul> 
 <p id = "intro"> Food on the Go<br>Get Started Today</p>
 </body>
