--- a/lunch.html
+++ b/lunch.html
@@ -11,7 +11,7 @@
 <ul>
 <li><a href="index.html">Home</a></li>
 <li class = "dropdown">
-<a href="meals.html" class = "dropbtn">Meals</a>
+<a href="meals.html" class = "dropbtn">Menu</a>
 <div class = "content">
 <a href="breakfast.html">Breakfast</a>
 <a href="#">Lunch</a>
