--- a/meals.html
+++ b/meals.html
@@ -9,7 +9,7 @@
 <ul>
 <li><a href="index.html">Home</a></li>
 <li class = "dropdown">
-<a href="#" class = "dropbtn">Meals</a>
+<a href="#" class = "dropbtn">Menu</a>
 <div class = "content">
 <a href="breakfast.html">Breakfast</a>
 <a href="lunch.html">Lunch</a>
