--- a/checkout.html
+++ b/checkout.html
@@ -1,28 +1,30 @@
+<!--Author: Jasmin Mousavi
+Final Project: Ordering Food-->
 <!DOCTYPE html>
 <html id = "two">
-<head>
-	<title>On the Go</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<script type="text/javascript" src="jscript.js"></script>
-</head>
-<body onload= "checkoutDisplay();">
-<ul>
-<li><a href="index.html">Home</a></li>
-<li class = "dropdown">
-<a href="meals.html" class = "dropbtn">Menu</a>
-<div class = "content">
-<a href="breakfast.html">Breakfast</a>
-<a href="lunch.html">Lunch</a>
-<a href="dinner.html">Dinner</a>
-</div>
-</li>
-<li><a href="cart.html">Cart</a></li>
-<li><a href="credits.html">Credits</a></li>
-</ul> 
-<p id = "checks">
-</p>
-<p id = "deliv">
-</p>
-</body>
+	<head>
+		<title>Food On The Go</title>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="stylesheet.css">
+		<script type="text/javascript" src="jscript.js"></script>
+	</head>
+	<body onload= "checkoutDisplay();">
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li class = "dropdown">
+			<a href="meals.html" class = "dropbtn">Menu</a>
+			<div class = "content">
+				<a href="breakfast.html">Breakfast</a>
+				<a href="lunch.html">Lunch</a>
+				<a href="dinner.html">Dinner</a>
+			</div>
+			</li>
+			<li><a href="cart.html">Cart</a></li>
+			<li><a href="credits.html">Credits</a></li>
+		</ul> 
+		<p id = "checks">
+		</p>
+		<p id = "deliv">
+		</p>
+	</body>
 </html>
